--- a/websockets/single_view/index.html
+++ b/websockets/single_view/index.html
@@ -4,7 +4,7 @@
     <title>WebSocket Video</title>
   </head>
   <body>
-    The canvas content is coming from the WebSocket server.
+    The Canvas content is coming from the WebSocket server.
     <canvas id="canvas" width="640" height="700"></canvas>
     <script>
       const canvas = document.getElementById("canvas");
