--- a/websockets/single_view/index.html
+++ b/websockets/single_view/index.html
@@ -10,7 +10,7 @@
       const PORT = 8765;
       const canvas = document.getElementById("canvas");
       const ctx = canvas.getContext("2d");
-      const ws = new WebSocket("ws://localhost:8765");
+      const ws = new WebSocket("ws://localhost:" + PORT);
 
       ws.binaryType = "arraybuffer";
 
